fix - limit hamburger button area to icon

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -136,3 +136,7 @@ hr {
 .play-along--chord + .play-along--chord {
   border-left: 1px solid white;
 }
+
+#react-burger-menu-btn {
+  display: none;
+}
