--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -127,6 +127,12 @@ hr {
   fill: white;
 }
 
+.piano-visualization-popover {
+  background: transparent;
+  width: 100vw;
+  max-width: 100vw;
+  border: none;
+}
 
 .play-along--count-in-modal--backdrop {
   background-color: rgba(0, 0, 0 , 0.8)!important;
