change target note indicator to (background + (label or icon))
If it's leading or common tone, add a background.
If it's leading, show a target since there's no label

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -123,6 +123,10 @@ hr {
   align-items: center;
 }
 
+.ReactPiano__Key--active.ReactPiano__Key--accidental {
+  border: none !important;
+}
+
 .recharts-pie text {
   stroke: black;
   stroke-width: 0.1em;
