--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -143,11 +143,7 @@ hr {
   max-width: 100vw;
 }
 
-.play-along--count-in-modal--backdrop {
-  background-color: rgba(0, 0, 0 , 0.8)!important;
-}
-
-.title-modal--backdrop {
+.play-along--count-in-modal--backdrop, .title-modal--backdrop {
   background-color: var(--main-bg-color) !important;
   opacity: 0.8 !important;
 }
